# MyExcercises

./: CMakeLists.txt  MyExcercises.cpp  MyExcercises.h  README.md
